--- a/src/client/interface/index.html
+++ b/src/client/interface/index.html
@@ -3,13 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>DSpotify</title>
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<script src="js/bootstrap.js"></script>
 </head>
 <body>
 
-<div id="app">
-	<h1>Welcome to DSpotify</h1>
-	<button v-on:click="upSong = true; initialState = false" v-if="!upSong && initialState">Upload Song</button>
-	<button v-on:click="upArtist = true; initialState = false" v-if="!upArtist && initialState">Upload Artist</button>
+<div class="container" id="app">
+	<br>
+	<h1 class="card-title">Welcome to DSpotify</h1>
+	<button class="btn-info btn" v-on:click="upSong = true; initialState = false" v-if="!upSong && initialState">Upload Song</button>
+	<button class="btn-info btn" v-on:click="upArtist = true; initialState = false" v-if="!upArtist && initialState">Upload Artist</button>
 
 	<!UPLOAD SONG>
 	<div id="uploadSong" v-if="upSong">
@@ -17,23 +20,22 @@
 		<input type="text" v-model="currentSongTitle"/>
 		<label>Artist: </label>
 		<input type="text" v-model="currentSongArtist"/>
-		<button v-on:click="uploadSong()">OK</button>
-		<button v-on:click="cancelUploadSong()">Cancel</button>
+		<button class="btn-success btn" v-on:click="uploadSong()">OK</button>
+		<button class="btn-danger btn" v-on:click="cancelUploadSong()">Cancel</button>
 	</div>
 
 	<!UPLOAD ARTIST>
 	<div id="uploadArtist" v-if="upArtist">
 		<label>Name: </label>
 		<input type="text" v-model="currentArtist"/>
-		<button v-on:click="uploadArtist()">OK</button>
-		<button v-on:click="cancelUploadArtist()">Cancel</button>
+		<button class="btn-success btn" v-on:click="uploadArtist()">OK</button>
+		<button class="btn-danger btn" v-on:click="cancelUploadArtist()">Cancel</button>
 	</div>
-	<br>
-	<br>
-	<button v-on:click="loadArtists">Load Artists</button>
+	<button class="btn-success btn" v-on:click="loadArtists">Load Artists</button>
 
 	<!ARTISTS>
 	<div id="artistsList" v-if="showArtists">
+		<br>
 		<h2>Artists</h2>
 		<div v-for="artist in sortedArtists" v-bind:key="artist.id">
 			<h3 v-on:click="getSongs(artist)">{{artist.name}}</h3>
